ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wheres-fluffy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /wheres-fluffy-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wheres-fluffy-service
                port:
                  number: 80
